# robo-web-editor

./: .gitignore  README.md  angular.json  app.component.css.map  editor.component.css.map  index.html  main.js  otto-calibrate-dialog.css.map  otto-remote-dialog.css.map  package-lock.json  package.json  styles.css  styles.css.map
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
arduino/otto-blocky-pico/: code_interpreter.h  otto-blocky-pico.ino  otto-interpreter.h  otto_code_interpreter.h  otto_config.h  otto_sensors.h
arduino/tests/: CMakeLists.txt  test.cpp
e2e/app/: app.component.spec.ts
src/: index.html  main.ts
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  logger.ts
src/app/blockly/: blockly.component.html  blockly.component.scss  blockly.component.spec.ts  blockly.component.ts
src/app/editor/: editor.component.html  editor.component.scss  editor.component.ts
src/app/editor/config/: config.blocks.ts  config.toolbox.ts
src/app/editor/generator/: generator.ts  opcode.ts
src/app/otto/: otto.device.ts  otto.service.ts  robot.device.ts  robot.service.ts
src/app/otto/otto-calibrate-dialog/: otto-calibrate-dialog.html  otto-calibrate-dialog.scss  otto-calibrate-dialog.ts
src/app/otto/otto-remote-dialog/: otto-remote-dialog.css  otto-remote-dialog.html  otto-remote-dialog.ts
src/app/shared/disconnect-bluetooth-dialog/: disconnect-bluetooth-dialog.html  (+1 more)
src/styles/: app.scss  flex.scss  margin.scss  padding.scss
